acm-workshop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acm-workshop
  namespace: acm-workshop
spec:
  type: ClusterIP
  selector:
    app: acm-workshop
  ports:
  - name: http
    port: 80
    targetPort: 8080
