acm-workshop/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acm-workshop
  namespace: acm-workshop
spec:
  hosts:
    - acm-workshop.alwaysupalwayson.com
  gateways:
  - asm-ingress/asm-ingressgateway
  http:
  - route:
    - destination:
        host: acm-workshop
        port:
          number: 80
