acm-workshop/authorizationpolicies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: acm-workshop
  namespace: acm-workshop
spec:
  selector:
    matchLabels:
      app: acm-workshop
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/asm-ingress/sa/asm-ingressgateway
    to:
    - operation:
        methods:
        - GET
        ports:
        - "8080"
