acm-workshop/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: acm-workshop
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: acm-workshop
  namespace: acm-workshop
spec:
  podSelector:
    matchLabels:
      app: acm-workshop
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: asm-ingress
      podSelector:
        matchLabels:
          app: asm-ingressgateway
    ports:
     - port: 8080
       protocol: TCP
  egress:
  - {}
